# IntranetChat

./: .gitignore  CMakeLists.txt  README.md  chat_client.py  chat_server.py  demo.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start_client.sh  start_server.sh  test_basic.py
docs/: ACTIVITY_DIAGRAMS.md  COMPONENT_DIAGRAMS.md  DEPLOYMENT_DIAGRAMS.md  DOMAIN_MODEL.md  GLOSSARY.md  SEQUENCE_DIAGRAMS.md  SRS.md  STATE_DIAGRAMS.md  TESTING_README.md  TESTING_SUMMARY.md  TEST_PLAN.md  TEST_RESULTS.md  USE_CASES.md
